--- a/rootdir/etc/init.device.rc
+++ b/rootdir/etc/init.device.rc
@@ -65,3 +65,27 @@ on post-fs-data
     # Create directory for focaltech fingerprint
     mkdir /data/vendor/focaltech 0760 system system
     restorecon /data/vendor/focaltech
+
+
+    rm /cache/boot_lc_main.txt
+    rm /cache/boot_dmesg.txt
+    start boot_lc_main
+    start boot_dmesg
+
+service boot_lc_main /system/bin/logcat -f /cache/boot_lc_main.txt
+    class main
+    user root
+    group root system
+    disabled
+    oneshot
+
+service boot_dmesg /system/bin/sh -c "dmesg -w > /cache/boot_dmesg.txt"
+    class main
+    user root
+    group root system
+    disabled
+    oneshot
+
+on property:sys.boot_completed=1
+    stop boot_lc_main
+    stop boot_dmesg
